[gd_scene load_steps=6 format=3 uid="uid://b7i1nkr4pbspi"]

[ext_resource type="PackedScene" uid="uid://m7xyfdg1014n" path="res://Weapons/weapon.tscn" id="1_7wq7w"]
[ext_resource type="Script" path="res://Weapons/Shotgun/shotgun_2.gd" id="2_jv27o"]
[ext_resource type="AudioStream" uid="uid://luvduyi2mf0f" path="res://Weapons/Shotgun/Shotgun_Blast-Jim_Rogers-1914772763.mp3" id="3_vojjl"]
[ext_resource type="AudioStream" uid="uid://c2um3ugx3s646" path="res://Weapons/Shotgun/shotgun-reload-old_school-RA_The_Sun_God-580332022.mp3" id="5_gjx00"]
[ext_resource type="PackedScene" uid="uid://b1fgv5kw5nj3t" path="res://Weapons/Shotgun/Player_Shotgun.glb" id="5_jhu4t"]

[node name="Shotgun 2" node_paths=PackedStringArray("reload_time", "fire_rate") instance=ExtResource("1_7wq7w")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.159551)
script = ExtResource("2_jv27o")
mag_size = 2
reload_time = NodePath("ReloadTimer")
fire_rate = NodePath("FireRate")
damage = 5
single_fire = true
bullet_speed = 20.0

[node name="FireSound" parent="." index="0"]
stream = ExtResource("3_vojjl")
volume_db = -7.046
max_db = -6.71
bus = &"Room"
attenuation_filter_cutoff_hz = 16000.0

[node name="Reload" type="AudioStreamPlayer3D" parent="." index="1"]
stream = ExtResource("5_gjx00")

[node name="ReloadTimer" parent="." index="2"]
wait_time = 2.4

[node name="FireRate" parent="." index="3"]
wait_time = 0.4

[node name="GunModel" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.461989, 0)

[node name="Muzzle" parent="." index="5"]
transform = Transform3D(-0.0112924, 9.87213e-10, 4.31525e-17, 0, -4.93606e-10, 0.0112924, 9.87213e-10, 0.0112924, 4.93606e-10, -5.80362e-08, 0.0900966, 0.663856)

[node name="Player_Shotgun" parent="." index="6" instance=ExtResource("5_jhu4t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0977339, -1.57996, -0.461817)

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="FireRate" to="." method="_on_fire_rate_timeout"]
